# exatepp-abm

./: .gitignore  CMakeLists.txt  LICENSE.md  readme.md
.github/scripts/: install_cuda_ubuntu.sh
.github/workflows/: Lint.yml  Ubuntu.yml
cmake/: CLI11.cmake  GoogleTest.cmake  fmt.cmake
cmake/checkcxx/: inclusive_scan.cmake  inclusive_scan.cpp
data/inputs/: sample.csv
data/scaling/: bench.sh  params.csv
src/: CMakeLists.txt  exatepp_abm.cu  exatepp_abm.h  main.cu
src/exateppabm/: cli.cpp  cli.h  constants.h  demographics.cu  demographics.h  disease.h  exatepp_abm.cu  exatepp_abm.h  household.cu  household.h  input.cu  input.h  network.cu  network.h  output.cu  output.h  person.cu  person.h  population.cu  population.h  random_interactions.cu  random_interactions.h  typedefs.h  util.cu  util.h  visualisation.cu  visualisation.h  workplace.cu  workplace.h
src/exateppabm/disease/: SEIR.cu  SEIR.h
src/exateppabm/output/: OutputFile.h  PerIndividualFile.cu  PerIndividualFile.h  PerformanceFile.cpp  PerformanceFile.h  TimeSeriesFile.cpp  TimeSeriesFile.h  TransmissionFile.cu  TransmissionFile.h
tests/: CMakeLists.txt
tests/src/: main.cu  temp.cu
tests/src/exateppabm/: test_household.cu  test_network.cu  test_population.cu  test_util.cu  test_workplace.cu
tools/: plot-per-individual.py  plot-performance.py  plot-timeseries.py
